mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_type_mismatch.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Type mismatch: expected int, got string
--> test_scripts/error_cases/semantic_type_mismatch.mux:2:9
   |
 2 | int n = "hello"
   |         ^^^^^^^
